2011-04-15  Tom Tromey  <tromey@redhat.com>

	* dwarf2read.c (add_index_entry): Use VEC_last, not VEC_length.

2011-04-15  Gary Benson  <gbenson@redhat.com>

	* MAINTAINERS: Add myself to write-after-approval section.

2011-04-14  Mike Frysinger  <vapier@gentoo.org>

	* remote-sim.c (sim_command_completer): New function.
	(_initialize_remote_sim): Set completer to sim_command_completer.

2011-04-13  Thiago Jung Bauermann  <bauerman@br.ibm.com>

	* breakpoint.c (print_exception_catchpoint): Rename to ...
	(print_it_exception_catchpoint): ... this.
	(gnu_v3_exception_catchpoint_ops): Update with new name
	for print_it_exception_catchpoint.

2011-04-13  Edjunior Machado  <emachado@linux.vnet.ibm.com>

	* MAINTAINERS: Add myself for write after approval privileges.

2011-04-13  Marek Polacek  <mpolacek@redhat.com>

	* MAINTAINERS: Add myself as a write-after-approval maintainer.

2011-04-13  Thiago Jung Bauermann  <bauerman@br.ibm.com>

	* breakpoint.c (watch_command_1): Remove colon from exp_string.

2011-04-13  Thiago Jung Bauermann  <bauerman@br.ibm.com>

	* breakpoint.c (save_breakpoints): Verify whether
	breakpoint_ops.print_recreate is defined before calling it.

2011-04-11  Gary Benson  <gbenson@redhat.com>

	Fix failure with --enable-maintainer-mode.
	* Makefile.in (aclocal_m4_deps): Updated gnulib dependencies.

2011-04-09  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Code cleanup.
	* symtab.c (search_symbols): Reorder the KIND description in the
	function comment.  Remove the unused 4th element of types, types2,
	types3 and types4.  New gdb_assert on KIND.
	(symtab_symbol_info): Remove the unused 4th element of classnames.
	New gdb_assert on KIND.
	* symtab.h (enum search_domain): New warning in the enum comment.
	Assign numbers to the elements VARIABLES_DOMAIN, FUNCTIONS_DOMAIN and
	TYPES_DOMAIN.

2011-04-09  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Fix crash of gdb save-index on a STABS file.