@@ -1,3 +1,9 @@
+2011-04-17  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	Fix Python access to inlined frames.
+	* gdb.python/py-frame-inline.c: New file.
+	* gdb.python/py-frame-inline.exp: New file.
+
 2011-04-13  Edjunior Machado  <emachado@linux.vnet.ibm.com>
 
 	* gdb.base/gdb1090.exp: Change breakpoint location to read the
